[tool.poetry]
name = "dockerhop"
version = "0.1.0"
description = "cmd line tool for building and running docker"
authors = ["carson ellsworth <ellsc33@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.0.0"
typer = "^0.9.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
